# dist/swagger.json
@@ -157,132 +157,6 @@
 				},
 				"type": "object",
 				"description": "Make all properties in T optional"
-			},
-			"BalancoItem": {
-				"properties": {
-					"codigo": {
-						"type": "string"
-					},
-					"nome": {
-						"type": "string"
-					},
-					"saldo": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"codigo",
-					"nome",
-					"saldo"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"BalancoPatrimonial": {
-				"properties": {
-					"ativo": {
-						"properties": {
-							"total": {
-								"type": "number",
-								"format": "double"
-							},
-							"naoCirculante": {
-								"items": {
-									"$ref": "#/components/schemas/BalancoItem"
-								},
-								"type": "array"
-							},
-							"circulante": {
-								"items": {
-									"$ref": "#/components/schemas/BalancoItem"
-								},
-								"type": "array"
-							}
-						},
-						"required": [
-							"total",
-							"naoCirculante",
-							"circulante"
-						],
-						"type": "object"
-					},
-					"passivo": {
-						"properties": {
-							"total": {
-								"type": "number",
-								"format": "double"
-							},
-							"naoCirculante": {
-								"items": {
-									"$ref": "#/components/schemas/BalancoItem"
-								},
-								"type": "array"
-							},
-							"circulante": {
-								"items": {
-									"$ref": "#/components/schemas/BalancoItem"
-								},
-								"type": "array"
-							}
-						},
-						"required": [
-							"total",
-							"naoCirculante",
-							"circulante"
-						],
-						"type": "object"
-					},
-					"patrimonioLiquido": {
-						"properties": {
-							"total": {
-								"type": "number",
-								"format": "double"
-							},
-							"contas": {
-								"items": {
-									"$ref": "#/components/schemas/BalancoItem"
-								},
-								"type": "array"
-							}
-						},
-						"required": [
-							"total",
-							"contas"
-						],
-						"type": "object"
-					},
-					"totais": {
-						"properties": {
-							"diferenca": {
-								"type": "number",
-								"format": "double"
-							},
-							"totalPassivoPL": {
-								"type": "number",
-								"format": "double"
-							},
-							"totalAtivo": {
-								"type": "number",
-								"format": "double"
-							}
-						},
-						"required": [
-							"diferenca",
-							"totalPassivoPL",
-							"totalAtivo"
-						],
-						"type": "object"
-					}
-				},
-				"required": [
-					"ativo",
-					"passivo",
-					"patrimonioLiquido",
-					"totais"
-				],
-				"type": "object",
-				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -830,70 +704,6 @@
 					{
 						"in": "path",
 						"name": "id",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				]
-			}
-		},
-		"/balanco-patrimonial": {
-			"get": {
-				"operationId": "GetBalanco",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"anyOf": [
-										{
-											"$ref": "#/components/schemas/BalancoPatrimonial"
-										},
-										{}
-									]
-								}
-							}
-						}
-					},
-					"500": {
-						"description": "",
-						"content": {
-							"application/json": {
-								"schema": {
-									"properties": {
-										"message": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"message"
-									],
-									"type": "object"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Relatórios"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "query",
-						"name": "mes",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					},
-					{
-						"in": "query",
-						"name": "ano",
 						"required": true,
 						"schema": {
 							"format": "double",
